# cmake-study

./: .gitignore
src/1.hello_world/: CMakeLists.txt  main.cpp
src/10.steps_demo/: CMakeLists.txt  main.cpp
src/11.generator_expression/: CMakeLists.txt
src/12.function_macro/: CMakeLists.txt
src/13.install_demo/: CMakeLists.txt  main.cpp
src/13.install_demo/src/: dlib.cpp  slib.cpp
src/14.find_demo/: CMakeLists.txt
src/15.custom_find/custom_mod/: CMakeLists.txt
src/15.custom_find/custom_mod/src/: dlib.cpp
src/15.custom_find/find_demo/: CMakeLists.txt
src/16.custom_find_cmake/custom_mod/: CMakeLists.txt
src/16.custom_find_cmake/custom_mod/cmake/: dlibConfig.cmake.in
src/16.custom_find_cmake/find_demo/: CMakeLists.txt  main.cpp
src/16.custom_find_cmake/find_demo/cmake/: Finddlib.cmake
src/17.demo_opencv/: CMakeLists.txt  main.cpp
src/4.static_lib_test/account_dir/: Account.h  CMakeLists.txt
src/4.static_lib_test/test_account/: CMakeLists.txt
src/5.dynamic_lib_test/account_dir/: Account.cpp  CMakeLists.txt
src/5.dynamic_lib_test/test_account/: main.cpp
src/6.build_together/account_dir/: Account.cpp
src/6.build_together/test_account/: test_account.cpp
src/7.message_var_demo/: CMakeLists.txt
src/8.include_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/8.include_demo/cmake/: module_1.cmake
src/9.if_demo/: CMakeLists.txt
